# shaka

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  KICKOFF.md  PLAN.md  pyproject.toml
src/shaka/: __init__.py  config.py
src/shaka/adapters/local/: chunker.py  embedder.py  generator.py  vector_index.py
src/shaka/domain/: models.py  ports.py
tests/: test_chunker.py  test_embedder.py  test_generator.py  test_models.py  test_vector_index.py
